# project-forge

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  template-ci.yml
docs/: commands.md  features.md  getting-started.md  index.md
docs/authoring/: feature-plugins.md  quickstart.md  style-guide.md  template-manifest.md
docs/templates/: go.md  index.md  node.md  python.md  rust.md
scripts/: test_templates.py
src/project_forge/: cli.py
src/project_forge/engine/: fs.py  hooks.py  packs.py  plan.py  render.py
src/project_forge/features/: __init__.py  ci_github_actions.py  docker.py  python_quality.py  release_python_pypi.py
src/project_forge/templates_builtin/go-api/: README.md.j2  forge.json  go.mod.j2  main.go.j2  main_test.go.j2
src/project_forge/templates_builtin/go-chi-api/: README.md.j2  forge.json  go.mod.j2  main.go.j2  main_test.go.j2
src/project_forge/templates_builtin/node-express-api/: README.md.j2  forge.json  package.json.j2  tsconfig.json.j2
src/project_forge/templates_builtin/node-ts-cli/: README.md.j2  forge.json  package.json.j2  tsconfig.json.j2
src/project_forge/templates_builtin/python-cli/: README.md.j2  forge.json  pyproject.toml.j2
src/project_forge/templates_builtin/python-fastapi/: README.md.j2  forge.json  (+1 more)
src/project_forge/templates_builtin/python-fastapi-postgres/: .gitignore.j2  README.md.j2  forge.json  pyproject.toml.j2
tests/: test_features_integration.py  test_features_registry.py  test_generate_all_templates.py  test_list_templates.py  test_security_paths.py
(+24 files in other folders)
