[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-forge"
version = "0.1.0"
description = "A fast, extensible scaffolding CLI that generates production-ready projects from versioned templates and plugin features."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/3xpluto/project-forge"

[project.scripts]
forge = "project_forge.cli:app"

[tool.setuptools.package-data]
"project_forge" = ["templates_builtin/**/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
